/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 * <p>
 * http://www.apache.org/licenses/LICENSE-2.0
 * <p>
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "format.proto";

package lance.format.pb;

message Transaction {
  // The version of the dataset this transaction was built from.
  uint64 read_version = 1;

  message Append {
    // The new fragments to append
    repeated DataFragment fragments = 1;
  }

  message Delete {
    // The fragments to update
    repeated DataFragment updated_fragments = 1;
    // The fragments to review
    repeated uint64 deleted_fragment_ids = 2;
    // The predicate that was evaluated
    string predicate = 3;
  }

  message Overwrite {
    // The new fragments
    repeated DataFragment fragments = 1;
    // The new schema
    repeated Field schema = 2;
  }

  message CreateIndex {}

  // An operation that rewrites but does not change the data in the table. These
  // kinds of operations just rearrange data.
  message Rewrite {
    // The old fragments that are being replaced
    repeated DataFragment old_fragments = 1;
    // The new fragments
    repeated DataFragment new_fragments = 2;
  }

  // An operation that merges in a new column, altering the schema.
  message Merge {
    // The updated fragments
    repeated DataFragment fragments = 1;
    // The new schema
    repeated Field schema = 2;
  }

  // The operation of this transaction.
  oneof operation {
    Append append = 100;
    Delete delete = 101;
    Overwrite overwrite = 102;
    CreateIndex create_index = 103;
    Rewrite rewrite = 104;
    Merge merge = 105;
  }

  // Optional version tag
  string tag = 8;
}